--- a/core/templates/core/contact.html
+++ b/core/templates/core/contact.html
@@ -62,7 +62,9 @@
               </div>
               <div>
                 <h3 class="text-lg font-semibold text-blue-900">Email Us</h3>
-                <p class="text-gray-600">esa.kenyattauniv@gmail.com,<!--><br>esa.kenyattauniv@gmail.com <--></p>
+                <p class="text-gray-600">
+                  <a href="mailto:esa.kenyattauniv@gmail.com" class="text-blue-900 hover:underline">esa.kenyattauniv@gmail.com</a>
+                </p>
               </div>
             </div>
             
@@ -72,7 +74,7 @@
               </div>
               <div>
                 <h3 class="text-lg font-semibold text-blue-900">Call Us</h3>
-                <p class="text-gray-600">+254 712 345 678<br>+254 723 456 789</p>
+                <p class="text-gray-600">+254 712 345 678</p>
               </div>
             </div>
             
