--- a/core/templates/core/contact.html
+++ b/core/templates/core/contact.html
@@ -74,7 +74,11 @@
               </div>
               <div>
                 <h3 class="text-lg font-semibold text-blue-900">Call Us</h3>
-                <p class="text-gray-600">+254 712 345 678</p>
+                <ul class="text-gray-600 space-y-1">
+                  <li>+254 725 691275 &mdash; Chair, Karanja James</li>
+                  <li>+254 757 019119 &mdash; Vice Chair, Aisha Mwachidzo</li>
+                  <li>+254 700 850287 &mdash; Publicity Secretary, David Kariuki</li>
+                </ul>
               </div>
             </div>
             
